syntax = "proto3";

option csharp_namespace = "Protos.Actions";

package actions;

import "google/type/datetime.proto";
import "google/protobuf/empty.proto";

import "Entities/Actions/CreateActionRequest.proto";
import "Entities/Actions/CreateActionResponse.proto";
import "Entities/Actions/UpdateActionRequest.proto";
import "Entities/Actions/UpdateActionResponse.proto";
import "Entities/Actions/GetRacesForActionRequest.proto";
import "Entities/Actions/GetRacesForActionResponse.proto";
import "Entities/Actions/GetActionEntrySettingsRequest.proto";
import "Entities/Actions/GetActionEntrySettingsResponse.proto";
import "Entities/Actions/GetAllActionsRequest.proto";
import "Entities/Actions/GetAllActionsResponse.proto";
import "Entities/Actions/GetActionRequest.proto";
import "Entities/Actions/GetActionResponse.proto";
import "Entities/Actions/GetSelectedActionsRequest.proto";
import "Entities/Actions/GetSelectedActionsResponse.proto";
import "Entities/Actions/DeleteActionRequest.proto";
import "Entities/Actions/DeleteActionResponse.proto";
import "Entities/Actions/GetResultsForActionRequest.proto";
import "Entities/Actions/GetResultsForActionResponse.proto";
import "Entities/Actions/AcceptCheckpointRequest.proto";
import "Entities/Actions/GetPublicActionsListResponse.proto";
import "Entities/Actions/GetSelectedPublicActionsListRequest.proto";
import "Entities/Actions/GetSelectedPublicActionsListResponse.proto";

service Actions {
  rpc createAction (createaction.CreateActionRequest) returns (createaction.CreateActionResponse);
  rpc updateAction (updateaction.UpdateActionRequest) returns (updateaction.UpdateActionResponse);
  rpc getRacesForAction (getracesforaction.GetRacesForActionRequest) returns (getracesforaction.GetRacesForActionResponse);
  rpc getActionEntrySettings (getactionentrysettings.GetActionEntrySettingsRequest) returns (getactionentrysettings.GetActionEntrySettingsResponse);
  rpc getAllActions (getallactions.GetAllActionsRequest) returns (getallactions.GetAllActionsResponse);
  rpc getAction    (getaction.GetActionRequest) returns (getaction.GetActionResponse);
  rpc getSelectedActions (getselectedactions.GetSelectedActionsRequest) returns (getselectedactions.GetSelectedActionsResponse);
  rpc deleteAction (deleteaction.DeleteActionRequest) returns (deleteaction.DeleteActionResponse);
  rpc getResultsForAction (getresultsforaction.GetResultsForActionRequest) returns (getresultsforaction.GetResultsForActionResponse);
  rpc acceptCheckpoint (acceptcheckpoint.AcceptCheckpointRequest) returns (google.protobuf.Empty);
  rpc getPublicActionsList (google.protobuf.Empty) returns (getpublicactionslist.GetPublicActionsListResponse);
  rpc getSelectedPublicActionsList (getselectedpublicactionslist.GetSelectedPublicActionsListRequest) returns (getselectedpublicactionslist.GetSelectedPublicActionsListResponse);
  
  rpc importRegistrationToAction (ImportRegistrationToActionRequest) returns (ImportRegistrationToActionResponse);
  rpc acceptPayment (AcceptPaymentRequest) returns (AcceptPaymentResponse);
}

message ImportRegistrationToActionRequest {
  string ActionId = 1;
  string EntryId = 2;
}

message ImportRegistrationToActionResponse {
  
}

message AcceptPaymentRequest {
  string Id = 1;
  string ActionId = 2;
  double Amount = 3;
  string Currency = 4;
  string Note = 5;
  string BankAccount = 6;
}

message AcceptPaymentResponse {
  
}