syntax = "proto3";

option csharp_namespace = "Protos.Actions.GetActionEntrySettings";

package getactionentrysettings;

import "google/type/datetime.proto";

message GetActionEntrySettingsResponse {
  string Id = 1;
  string Name = 2;
  repeated RaceDto Races = 3;
  repeated CategoryDto Categories = 4;
  string Type = 5;
}

message RaceDto {
  string Id = 1;
  string Name = 2;
  google.type.DateTime Start = 3;
  google.type.DateTime End = 4;
  RaceLimitsDto Limits = 5;
}

message CategoryDto {
  string Id = 1;
  string RaceId = 2;
  string Name = 3;
}

message RaceLimitsDto {
  int32 MinimalAgeOfThePetInDayes = 1;
  int32 MinimalAgeOfRacerInDayes = 2;
  bool WithPets = 3;
}