syntax = "proto3";

option csharp_namespace = "Protos.Dogs.GetAllDogs";

package getalldogs;

import "google/type/datetime.proto";

message GetAllDogsResponse {
  repeated DogDto Dogs = 1;
}

message DogDto {
  string Id = 1;
  string UserId = 2;
  string Contact = 3;
  string Name = 4;
  string Kennel = 5;
  string Pedigree = 6;
  string Chip = 7;
  optional google.type.DateTime Birthday = 8;
  optional google.type.DateTime Decease = 9;
  string UriToPhoto = 10;

  repeated Vaccination Vaccinations = 11;
}

message Vaccination {
  optional google.type.DateTime Date = 1;
  optional google.type.DateTime ValidUntil = 2;
  VaccinationType Type = 3;
  string Note = 4;
  string UriToPhoto = 5;
}

enum VaccinationType {
  VaccinationType_Unspecified = 0;
  Rabies = 1; // vzteklina
  Psinka = 2;
  Parvoviroza = 3;
  HepatitidaContagiosaCanis = 4;
  Leptospiroza = 5;
  Parainfluenza = 6;
  LymskaBorelioza = 7;
  Babesioza = 8;
  PlisnoveInfekce = 9;
  Leishmanioza = 10;
}